2009-04-25  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* SyntaxModes/LuaSyntaxMode.xml: Added lua syntax mode.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextEditor.cs: Fixed "Bug 497118 - Code
	  folding makes debugging annoying".

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/ClipboardActions.cs: Fixed some minor text
	  editor issues.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Improved search pattern
	  update.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/SelectionActions.cs: Select All now works
	  correct.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorData.cs: Fixed selected lines
	  property. Several IDE commands used that (ex.
	  comment/uncomment). They should now work correctly again.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/SearchRequest.cs: Only fire change event
	  when the value actually changed.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Fixed bug in code
	  templates.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/ISearchEngine.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs: Fixed "Bug 495626 - Regex
	  searches are slow, and CPU usage is high while results are
	  highlighted".

2009-04-23  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/DefaultEditActions.cs: Implement actions for
	  scrolling PageDown and PageUp.

2009-04-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Fixed bug in
	  markup highlighter.

2009-04-17  Mike Kestner  <mkestner@novell.com>
