@@ -111,6 +111,7 @@ RES =  \
 	SyntaxModes/CSharpSyntaxMode.xml \
 	SyntaxModes/CSyntaxMode.xml \
 	SyntaxModes/DiffSyntaxMode.xml \
+	SyntaxModes/ILSyntaxMode.xml \
 	SyntaxModes/JavascriptSyntaxMode.xml \
 	SyntaxModes/JavaSyntaxMode.xml \
 	SyntaxModes/LuaSyntaxMode.xml \
