@@ -1,3 +1,11 @@
+2009-04-27  Mike Krüger  <mkrueger@novell.com>
+
+	* Makefile.am:
+	* Mono.TextEditor.csproj:
+	* SyntaxModes/ILSyntaxMode.xml:
+	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Added IL syntax
+	  mode.
+
 2009-04-25  Mike Krüger  <mkrueger@novell.com>
 
 	* Makefile.am:
